
set(SCINTILLA_HDRS
	"${CMAKE_SOURCE_DIR}/include/scintilla/Accessor.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/AutoComplete.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CallTip.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CaseConvert.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CaseFolder.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Catalogue.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CellBuffer.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CharacterCategory.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CharacterSet.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/CharClassify.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ContractionState.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/DBCS.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Decoration.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/DefaultLexer.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Document.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/EditModel.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Editor.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/EditView.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ElapsedPeriod.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ExternalLexer.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/FontQuality.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ILexer.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ILoader.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Indicator.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/IntegerRectangle.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/KeyMap.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/LexAccessor.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/LexerBase.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/LexerModule.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/LexerNoExceptions.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/LexerSimple.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/LineMarker.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/MarginView.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/OptionSet.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Partitioning.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/PerLine.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Platform.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/PlatQt.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Position.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/PositionCache.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/PropSetSimple.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/RESearch.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/RunStyles.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Sci_Position.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/SciLexer.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Scintilla.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ScintillaBase.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ScintillaDocument.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ScintillaEdit.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ScintillaEditBase.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ScintillaQt.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ScintillaWidget.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Selection.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/SparseState.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/SparseVector.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/SplitVector.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/StringCopy.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/Style.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/StyleContext.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/SubStyles.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/UniConversion.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/UniqueString.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/ViewStyle.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/WordList.h"
	"${CMAKE_SOURCE_DIR}/include/scintilla/XPM.h"
	)
set(SCINTILLA_SRCS 
	"Accessor.cxx"
	"AutoComplete.cxx"
	"CallTip.cxx"
	"CaseConvert.cxx"
	"CaseFolder.cxx"
	"Catalogue.cxx"
	"CellBuffer.cxx"
	"CharacterCategory.cxx"
	"CharacterSet.cxx"
	"CharClassify.cxx"
	"ContractionState.cxx"
	"DBCS.cxx"
	"Decoration.cxx"
	"DefaultLexer.cxx"
	"Document.cxx"
	"EditModel.cxx"
	"Editor.cxx"
	"EditView.cxx"
	"ExternalLexer.cxx"
	"Indicator.cxx"
	"KeyMap.cxx"
	"LexerBase.cxx"
	"LexerModule.cxx"
	"LexerNoExceptions.cxx"
	"LexerSimple.cxx"
	"LineMarker.cxx"
	"MarginView.cxx"
	"PerLine.cxx"
	"PlatQt.cpp"
	"PositionCache.cxx"
	"PropSetSimple.cxx"
	"RESearch.cxx"
	"RunStyles.cxx"
	"ScintillaBase.cxx"
	"ScintillaDocument.cpp"
	"ScintillaEdit.cpp"
	"ScintillaEditBase.cpp"
	"ScintillaQt.cpp"
	"Selection.cxx"
	"Style.cxx"
	"StyleContext.cxx"
	"UniConversion.cxx"
	"UniqueString.cxx"
	"ViewStyle.cxx"
	"WordList.cxx"
	"XPM.cxx")

source_group(Scintilla ${SCINTILLA_SRCS})
source_group(Scintilla Headers ${SCINTILLA_HDRS})
add_compile_definitions(MAKING_LIBRARY=)
add_library(Scintilla SHARED ${SCINTILLA_SRCS} ${SCINTILLA_HDRS})
set_target_properties(Scintilla PROPERTIES
	                  RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin/Debug
	                  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin/Release)
target_link_libraries(Scintilla Qt5::Core Qt5::Widgets)



